package dev.luin.fc.core.download;

public enum DownloadStatus
{
	CREATED, SUCCEEDED, FAILED;
}
