package dev.luin.fc.core.upload;

public enum UploadStatus
{
	CREATED, SUCCEEDED, FAILED;
}
